# cuvis.pyil

./: .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION.md  MANIFEST.in  README.md  build_and_upload_linux.sh  build_and_upload_win.sh  build_dispatcher_win.sh  build_script.sh  build_script_linux.sh  build_script_windows.sh  copy_pyil_files.sh  pyproject.toml  setup.py
.github/workflows/: build_and_test.yml  publish_version.yml
cuvis_il/: __init__.py
include_win32_3.9/numpy/: _numpyconfig.h  _umath_doc_generated.h  config.h
numpy/: find_numpy.py
