[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuvis_il"
version = "3.5.0"
description = "Compiled Python Bindings for the CUVIS SDK."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    { name = "Cubert GmbH, Ulm, Germany", email = "sdk@cubert-gmbh.com" }
]

dependencies = [
    "numpy>=2.0.0; python_version>='3.13'",
    "numpy>=1.26.0; python_version>='3.12'",
    "numpy>=1.23.0; python_version>='3.11'",
    "numpy>=1.22.0; python_version>='3.9'"
]

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Image Processing",
]


[tool.setuptools]
packages = ["cuvis_il"]
include-package-data = true

[project.urls]
Homepage = "https://www.cubert-hyperspectral.com/"
Repository = "https://github.com/cubert-hyperspectral/cuvis.pyil"
Documentation = "https://cubert-hyperspectral.github.io/cuvis.doc/"
Changelog = "https://github.com/cubert-hyperspectral/cuvis.pyil/releases"
Issues = "https://github.com/cubert-hyperspectral/cuvis.pyil/issues"

[tool.setuptools.package-data]
cuvis_il = ["*.pyd", "*.so", "cuvis_il.py"]
